feat: new specs impl, typo fix on allergy object, refactor test to avoid boilerplates code
