# doc/api.yaml
@@ -549,15 +549,15 @@ paths:
           $ref: '#/components/responses/404'
         '500':
           $ref: '#/components/responses/500'
-  /allergy:
+  /allergies:
     get:
       tags:
-        - allergy
-      summary: Get user allergy
-      operationId: getAllergy
+        - Allergies
+      summary: Get user's allergies
+      operationId: getAllergies
       responses:
         '200':
-          description: List of Allergy
+          description: List of Allergies
           content:
             application/json:
               schema:
@@ -567,12 +567,12 @@ paths:
         '400':
           description: Error when sending the request
         '404':
-          description: Ressources not found
+          description: Resources not found
         '500':
           description: Server error
     put:
       tags:
-        - allergy
+        - Allergies
       summary: Insert allergies for an user
       operationId: crupdateAllergies
       requestBody:
@@ -599,12 +599,12 @@ paths:
           $ref: '#/components/responses/404'
         '500':
           $ref: '#/components/responses/500'
-  /allergy/{user_id}:
+  /allergies/{user_id}:
     get:
       tags:
-        - allergy
+        - Allergies
       summary: Get allergy by user
-      operationId: getAllergyByUser
+      operationId: getAllergiesByUser
       parameters:
         - name: user_id
           in: path
@@ -613,7 +613,7 @@ paths:
             type: string
       responses:
         '200':
-          description: List of Allergy
+          description: List of Allergies
           content:
             application/json:
               schema:
@@ -668,11 +668,11 @@ components:
           type: string
         password:
           type: string
-        Allergies:
+        allergies:
           type: array
           items:
             type: string
-        Preferences:
+        preferences:
           type: array
           items:
             type: string
@@ -756,10 +756,8 @@ components:
         id:
           type: string
           format: uuid
-        user:
-          $ref: '#/components/schemas/User'
-        ingredient:
-          $ref: '#/components/schemas/Ingredient'
+        ingredient_name:
+          type: string
     RecipeIngredients:
       type: object
       properties:
