# src/main/java/com/genfood/foodgenback/endpoint/rest/model/Allergy.java
@@ -11,6 +11,6 @@ import lombok.NoArgsConstructor;
 @Builder
 public class Allergy {
   private String id;
-  private User user;
-  private Ingredient ingredient;
+  private String userId;
+  private String ingredientName;
 }
